--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.15)
 project(cmc_project C)
 
 # Use cmake generator expressions https://cmake.org/cmake/help/latest/manual/cmake-generator-expressions.7.html
 
 set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED TRUE)
-
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2 -Wall -Wextra -Werror=switch-enum")
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og -ggdb -Wall -Wextra -Werror=switch-enum -fsanitize=address,undefined")
 
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 
@@ -20,6 +17,14 @@ file(GLOB_RECURSE SRC_FILES src/*.c)
 add_library(cmc ${SRC_FILES})
 target_link_libraries(cmc PRIVATE ZLIB::ZLIB OpenSSL::SSL CURL::libcurl)
 target_include_directories(cmc PUBLIC include)
+
+if(MSVC)
+    target_compile_options(cmc PRIVATE /W4)
+else()
+    target_compile_options(cmc PRIVATE -Wall -Wextra -Werror=switch-enum)
+    target_compile_options(cmc PUBLIC $<$<CONFIG:DEBUG>:-fsanitize=address,undefined>)
+    target_link_options(cmc PUBLIC $<$<CONFIG:DEBUG>:-fsanitize=address,undefined>)
+endif()
 
 add_custom_target(format
     COMMAND clang-format -i src/* include/cmc/*
