--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ target_include_directories(cmc PUBLIC include)
 if(MSVC)
     target_compile_options(cmc PRIVATE /W4)
 else()
-    target_compile_options(cmc PRIVATE -Wall -Wextra -Werror=switch -Wno-unused-label)
+    target_compile_options(cmc PRIVATE -Wall -Wextra -Werror=switch)
     target_compile_options(cmc PUBLIC $<$<CONFIG:DEBUG>:-fsanitize=address,undefined>)
     target_link_options(cmc PUBLIC $<$<CONFIG:DEBUG>:-fsanitize=address,undefined>)
 endif()
