test free buffer and bool is c type now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,21 @@ set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED TRUE)
 
 add_library(cmc
-  src/buffer.c
-  src/error.c
+  src/types/c_types.c
+  src/buff.c
+  src/err.c
+  src/heap_utils.c
 )
 
 target_include_directories(cmc PUBLIC include)
 
+if(NOT PROJECT_IS_TOP_LEVEL)
+  return()
+endif()
+
+include(CTest)
+
+add_executable(simple_types_test tests/simple_types.c)
+target_link_libraries(simple_types_test PUBLIC cmc)
+target_include_directories(simple_types_test PUBLIC include)
+add_test(NAME simple_types_test COMMAND simple_types_test)
